--- a/styles/login.css
+++ b/styles/login.css
@@ -2,12 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 100%;
 }
 
 .input {
   padding: 0.75rem;
-  border: 1px solid var(---primary-blue);
+  border: 1px solid var(--primary-blue);
   border-radius: 0.5rem;
 }
 
@@ -15,8 +14,8 @@
   display: flex;
   justify-content: space-between;
   font-size: small;
-  gap: .5rem;
-  color: var(---primary-blue);
+  gap: 0.5rem;
+  color: var(--primary-blue);
 }
 
 .link {
