--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -15,18 +15,19 @@
   position: absolute;
   top: 100%;
   right: 4rem;
-  background-color: var(---primary-gray);
+  background-color: var(--primary-gray);
   padding: 1rem;
   border-radius: 0.75rem;
   z-index: 1;
   opacity: 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .popover ul {
   display: flex;
   flex-direction: column;
   gap: 0.35rem;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
 }
 
 .popover ul li {
@@ -34,7 +35,7 @@
 }
 
 .trigger-button {
-  background-color: var(---primary-gray);
+  background-color: var(--primary-gray);
   padding: 0.5rem;
   border-radius: 0.75rem;
 }
