--- a/components/navbar/index.html
+++ b/components/navbar/index.html
@@ -1,20 +1,30 @@
 <nav class="nav-container">
-    <div class="logotype">
-      <span> UCP-Correlatives </span>
+  <div class="logotype">
+    <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M24 4C25.7818 14.2173 33.7827 22.2182 44 24C33.7827 25.7818 25.7818 33.7827 24 44C22.2182 33.7827 14.2173 25.7818 4 24C14.2173 22.2182 22.2182 14.2173 24 4Z"
+        fill="currentColor"
+      ></path>
+    </svg>
+    <a href="/" onclick="route(event)"> UCP-Correlatives </a>
+  </div>
+  <div class="popover-container">
+    <button class="trigger-button">Menú</button>
+    <div class="popover">
+      <ul>
+        <li><a href="/login" onclick="route(event)">Iniciar Sesión</a></li>
+        <li><a href="/register" onclick="route(event)">Registrarse</a></li>
+        <li><a href="/" onclick="route(event)">Cerrar Sesión</a></li>
+      </ul>
     </div>
-    <div class="popover-container">
-      <button class="trigger-button">Menú</button>
-      <div class="popover">
-        <ul>
-          <li>Perfil</li>
-          <li>Configuración</li>
-          <li>Cerrar Sesión</li>
-        </ul>
-      </div>
-      <div class="profile-button-container"> 
-        <button class="profile-button">
-          <img id="profile-photo" src="https://avatars.githubusercontent.com/u/89951225?s=400&v=4" alt="Foto de perfil">
-        </button>
-      </div>
+    <div class="profile-button-container">
+      <button class="profile-button">
+        <img
+          id="profile-photo"
+          src="https://cdn.usegalileo.ai/sdxl10/d7507dd8-8264-4531-86c1-5e8f494d0134.png"
+          alt="Foto de perfil"
+        />
+      </button>
     </div>
-  </nav>
+  </div>
+</nav>
