--- a/styles/home.css
+++ b/styles/home.css
@@ -1,55 +1,91 @@
+/* Container */
+.home-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Hero */
 .hero {
-  background: var(---primary-gray);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.4)),
+    url("https://cdn.usegalileo.ai/stability/e4147d5d-c3d6-4e76-91fc-2b16cb49b906.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 50vh;
   width: 60vw;
   border-radius: 2rem;
   display: flex;
-  padding: 1.5rem;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: var(--primary-white);
+  padding: 2rem;
+  gap: 1rem;
+}
+
+.hero h1 {
+  font-size: 2rem;
+  font-weight: 900;
+  letter-spacing: -0.033em;
+}
+
+.hero h4 {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+/* Form */
+.input-form {
+  display: flex;
+  gap: 1rem;
+  width: 100%;
+  max-width: 480px;
   flex-direction: column;
 }
 
-/* .input {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: small;
-    color: var(---primary-black);
-    gap: .75rem;
+.input-group {
+  display: flex;
+  align-items: center;
+  border: 1px solid #cedde8;
+  border-radius: 0.75rem;
+  background-color: var(--primary-white);
+  padding: 0.5rem;
 }
 
-.input .in {
-    padding: 1rem;
-    height: .75rem;
-    border: 1px solid var(---primary-blue);
-    border-radius: .5rem;
-} */
-
-.btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: .75rem;
-    padding: 1rem;
-    border: 1px solid var(---primary-white);
-    border-radius: .5rem;
-    background-color: var(---primary-blue);
-    cursor: pointer;
-    color: var(---primary-white);
-    font-weight: 600;
-    animation-duration: 150ms;
+.input-group svg {
+  margin-right: 0.5rem;
+  color: var(--primary-sky-blue);
 }
 
-.btn:hover {
-    animation: bounce-btn 300ms forwards;
+.input-field {
+  flex: 1;
+  border: none;
+  outline: none;
+  padding: 0.5rem;
+  color: var(--primary-black);
+  background-color: transparent;
+  font-size: 0.875rem;
 }
 
-@keyframes bounce-btn {
-    95% {
-        transform: scale(104%);
-    }
-    100% {
-        transform: scale(103%);
-    }
+.btn-submit {
+  background-color: var(--primary-sky-blue);
+  color: var(--primary-white);
+  padding: 0.75rem 1rem;
+  border-radius: 0.75rem;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* Footer */
+.footer {
+  padding: 1rem;
+  text-align: center;
+  color: var(--primary-blue-gray);
+  font-size: 0.875rem;
+  text-decoration: underline;
 }
