--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,25 +1,39 @@
-.logotype {
+.nav-container {
   display: flex;
-  font-weight: bold;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  border-bottom: 1px solid #e7eef4;
 }
 
-/* PopOver */
-.popover-container {
-  position: relative;
+.logotype {
   display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-weight: bold;
+  color: #0d151c;
+}
+
+.actions {
+  display: flex;
+  align-items: center;
   gap: 2rem;
+}
+
+.popover-container,
+.profile-popover-container {
+  position: relative;
 }
 
 .popover {
   display: none;
   position: absolute;
   top: 100%;
-  right: 4rem;
-  background-color: var(--primary-gray);
+  right: 0;
+  background-color: #e7eef4;
   padding: 1rem;
   border-radius: 0.75rem;
   z-index: 1;
-  opacity: 0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -34,29 +48,29 @@
   cursor: pointer;
 }
 
-.trigger-button {
-  background-color: var(--primary-gray);
+.trigger-button,
+.profile-button {
+  background-color: #e7eef4;
   padding: 0.5rem;
   border-radius: 0.75rem;
+  border: none;
+  cursor: pointer;
 }
 
 .trigger-button:hover + .popover,
-.popover:hover {
+.popover:hover,
+.profile-button:hover + .popover {
   display: block;
   animation: display-menu 250ms forwards;
 }
 
-/* Img button */
-.profile-button-container {
-  display: flex;
-}
-
 .profile-button {
+  display: flex;
+  align-items: center;
   border-radius: 50%;
   overflow: hidden;
   width: 2.5rem;
   height: 2.5rem;
-  border: none;
 }
 
 .profile-button img {
