--- a/components/navbar/index.html
+++ b/components/navbar/index.html
@@ -1,4 +1,4 @@
-<nav class="nav-container">
+<header class="nav-container">
   <div class="logotype">
     <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path
@@ -9,7 +9,7 @@
     <a href="/" onclick="route(event)"> UCP-Correlatives </a>
   </div>
   
-  <div class="actions">
+  <nav class="actions">
     <div class="popover-container">
       <button class="trigger-button" aria-expanded="false" aria-controls="menu-popover">Menú</button>
       <div class="popover" id="menu-popover" role="menu">
@@ -37,5 +37,5 @@
         </ul>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
+</header>
